# blop

./: .gitattributes  AGENTS.md  LICENSE  pixi.toml  pyproject.toml
.github/workflows/: _docs.yml  _testing.yml  ci.yml
docs/source/: deployments.rst  explanation.rst  how-to-guides.rst  index.rst  installation.rst  reference.rst  release-history.rst  tutorials.rst
docs/source/explanations/: acquisition-plan.rst  ax-integration.rst  callbacks.rst  evaluation-function.rst
docs/source/how-to-guides/: custom-callbacks.rst
docs/source/reference/: agent.rst  callbacks.rst  plan_stubs.rst  protocols.rst  queueserver.rst
docs/source/reference/ax/: agent.rst  dof-constraint.rst  dof.rst  objective.rst  optimizer.rst  outcome-constraint.rst
docs/source/reference/xopt/: optimizer.rst
docs/source/tutorials/: queueserver.md  srw-sim.md  xrt-bmm.md  xrt-kb-mirrors.md
docs/wip/: qserver-experiment.md
sim/: pyproject.toml
sim/blop_sim/: __init__.py
sim/blop_sim/backends/: __init__.py  core.py  simple.py  xrt.py  xrt_bmm.py
sim/blop_sim/backends/models/: xrt_bmm_model.py  xrt_kb_model.py
sim/blop_sim/devices/xrt/: __init__.py  dcm.py  toroidal_mirror.py
sim/blop_sim/devices/xrt_bmm/: __init__.py  dcm.py  toroidal_mirror.py
src/blop/: __init__.py  plan_stubs.py  plans.py  protocols.py  queueserver.py  utils.py
src/blop/ax/: __init__.py  agent.py  dof.py  objective.py  optimizer.py  queueserver_agent.py
src/blop/bayesian/: __init__.py  kernels.py  models.py
src/blop/callbacks/: __init__.py  logger.py  router.py  utils.py
src/blop/sim/: srw_beamline.py  srw_model.py
src/blop/tests/: conftest.py  test_plans.py  test_queueserver.py  test_utils.py
src/blop/tests/ax/: test_agent.py  test_optimizer.py  test_queueserver_agent.py
src/blop/tests/xopt/: test_optimizer.py
src/blop/xopt/: __init__.py  optimizer.py
